...
                        <viewControllerLayoutGuide type="bottom" id="CGL-SH-6gy"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="iMk-zP-Al8">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                        <subviews>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" minimumFontSize="22" translatesAutoresizingMaskIntoConstraints="NO" id="2oP-Br-cyE">
                                <rect key="frame" x="16" y="254" width="568" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="310" id="HfW-YH-obX"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="22"/>
                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="next"/>
                                <variation key="default">
                                    <mask key="constraints">
                                        <exclude reference="HfW-YH-obX"/>
                                    </mask>
                                </variation>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" minimumFontSize="22" translatesAutoresizingMaskIntoConstraints="NO" id="2rT-m0-oiR">
                                <rect key="frame" x="16" y="292" width="568" height="30"/>
                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="22"/>
                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="go" secureTextEntry="YES"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fKs-b8-JKM">
                                <rect key="frame" x="16" y="330" width="568" height="39"/>
                                <color key="backgroundColor" red="0.99215686270000003" green="0.6705882353" blue="0.30980392159999998" alpha="1" colorSpace="calibratedRGB"/>
                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                <state key="normal" title="Sign In">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
                                <connections>
                                    <action selector="signInPressed:" destination="OfE-zq-hkR" eventType="touchUpInside" id="pzh-BD-DwP"/>
                                </connections>
...
                                <nil key="highlightedColor"/>
                            </label>
                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="Sxj-S7-xb3">
                                <rect key="frame" x="282" y="266" width="37" height="37"/>
                                <color key="color" red="0.99215686270000003" green="0.6705882353" blue="0.30980392159999998" alpha="1" colorSpace="calibratedRGB"/>
                            </activityIndicatorView>
                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="740" image="splash" translatesAutoresizingMaskIntoConstraints="NO" id="Wo0-Wq-CoO">
                                <rect key="frame" x="180" y="64" width="240" height="182"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="240" id="nQA-3B-tXT"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bFr-O4-FAE">
                                <rect key="frame" x="16" y="377" width="568" height="39"/>
                                <color key="backgroundColor" red="0.99215686270000003" green="0.6705882353" blue="0.30980392159999998" alpha="1" colorSpace="calibratedRGB"/>
                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                <state key="normal" title="Register">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
                                <connections>
                                    <action selector="registerPressed:" destination="OfE-zq-hkR" eventType="touchUpInside" id="Xce-tp-5Sb"/>
                                </connections>
...
