...
            user.password = password
            
            user.register({ [weak self] user in
                print("[INFO]: User created successfully!")

                let userCreatedAlert = UIAlertController(title: "User created successfully", message:"Credential: \(userName)/\(password)", preferredStyle: .Alert)
                let defaultAction = UIAlertAction(title: "OK", style: .Default, handler: nil)
                userCreatedAlert.addAction(defaultAction)
                
                self?.presentViewController(userCreatedAlert, animated: true, completion: nil)

            }, failure: { error in
                if error.code == 409 {
...
